--- a/speedportal/main/templates/main/base.html
+++ b/speedportal/main/templates/main/base.html
@@ -6,7 +6,6 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
-
     {% block styles %}{% endblock %}
 
 </head>
@@ -14,6 +13,8 @@
     <a href="{% url 'main:home' %}">Главная</a>
     <a href="{% url 'main:about' %}">О нас</a>
     <a href="{% url 'main:all_games' %}">Все игры</a>
+    <a href="{% url 'users:login' %}">Войти</a>
+    <a href="{% url 'users:registration' %}">Зарегистрироваться</a>
     {% block content %}{% endblock %}
 </body>
 </html>
