--- a/speedportal/main/templates/main/base.html
+++ b/speedportal/main/templates/main/base.html
@@ -15,6 +15,7 @@
     <a href="{% url 'main:all_games' %}">Все игры</a>
     <a href="{% url 'users:login' %}">Войти</a>
     <a href="{% url 'users:registration' %}">Зарегистрироваться</a>
+    <a href="{% url 'users:profile' %}">Профиль</a>
     {% block content %}{% endblock %}
 </body>
 </html>
