--- a/speedportal/users/templates/users/base.html
+++ b/speedportal/users/templates/users/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+    <a href="{% url 'main:home' %}">На главную</a>
     {% block content %}{% endblock %}
 </body>
 </html>
