--- a/speedportal/main/templates/main/base.html
+++ b/speedportal/main/templates/main/base.html
@@ -16,6 +16,7 @@
     <a href="{% url 'users:login' %}">Войти</a>
     <a href="{% url 'users:registration' %}">Зарегистрироваться</a>
     <a href="{% url 'users:profile' %}">Профиль</a>
+    <a href="{% url 'users:logout' %}">Выйти</a>
     {% block content %}{% endblock %}
 </body>
 </html>
