--- a/speedportal/main/templates/main/base.html
+++ b/speedportal/main/templates/main/base.html
@@ -13,10 +13,13 @@
     <a href="{% url 'main:home' %}">Главная</a>
     <a href="{% url 'main:about' %}">О нас</a>
     <a href="{% url 'main:all_games' %}">Все игры</a>
+    {% if user.is_authenticated %}
+    <a href="{% url 'users:profile' user.username %}">Профиль</a>
+    <a href="{% url 'users:logout' %}">Выйти</a>
+    {% else %}
     <a href="{% url 'users:login' %}">Войти</a>
     <a href="{% url 'users:registration' %}">Зарегистрироваться</a>
-    <a href="{% url 'users:profile' %}">Профиль</a>
-    <a href="{% url 'users:logout' %}">Выйти</a>
+    {% endif %}
     {% block content %}{% endblock %}
 </body>
 </html>
