--- a/speedportal/main/templates/main/base.html
+++ b/speedportal/main/templates/main/base.html
@@ -14,7 +14,7 @@
     <a href="{% url 'main:about' %}">О нас</a>
     <a href="{% url 'main:all_games' %}">Все игры</a>
     {% if user.is_authenticated %}
-    <a href="{% url 'users:profile' user.username %}">Профиль</a>
+    <a href="{% url 'users:profile' user.id %}">Профиль</a>
     <a href="{% url 'users:logout' %}">Выйти</a>
     {% else %}
     <a href="{% url 'users:login' %}">Войти</a>
