--- a/speedportal/users/templates/users/profilechange.html
+++ b/speedportal/users/templates/users/profilechange.html
@@ -28,5 +28,5 @@
       <input type="submit">
     </p>
   </form>
-  <a href="{% url 'users:profile' user.id %}">Отменить</a>
+  <a href="{% url 'users:profile' user.slug %}">Отменить</a>
 {% endblock %}
