Add validation, Add run page

--- a/speedportal/main/templates/main/index.html
+++ b/speedportal/main/templates/main/index.html
@@ -14,5 +14,5 @@
     <p>{{ message }}</p>
 {% endfor %}
 <h1>Главная страница</h1>
-<p>Текст</p>
+<p>Вы можете <a href="{% url 'main:run_upload' %}">загрузить свой ран</a></p>
 {% endblock %}
