--- a/speedportal/main/templates/main/base.html
+++ b/speedportal/main/templates/main/base.html
@@ -15,6 +15,9 @@
     <a href="{% url 'main:all_games' %}">Все игры</a>
     {% if user.is_authenticated %}
     <a href="{% url 'users:profile' user.slug %}">Профиль</a>
+    {% if user.is_moderator %}
+    <a href="{% url 'main:moderation' %}">Модерация</a>
+    {% endif %}
     <a href="{% url 'users:logout' %}">Выйти</a>
     {% else %}
     <a href="{% url 'users:login' %}">Войти</a>
