--- a/speedportal/main/templates/main/moderation.html
+++ b/speedportal/main/templates/main/moderation.html
@@ -1,5 +1,7 @@
 {% extends 'main/base.html' %}
 
+{% block title %}Модерация{% endblock %}
+
 {% block content %}
 <h1>Ваша страница модератора</h1>
 <h2>Забеги, ожидающие валидации</h2>
