--- a/speedportal/main/templates/main/base.html
+++ b/speedportal/main/templates/main/base.html
@@ -23,6 +23,9 @@
     <a href="{% url 'users:login' %}">Войти</a>
     <a href="{% url 'users:registration' %}">Зарегистрироваться</a>
     {% endif %}
+    {% for message in messages %}
+        <p>{{ message }}</p>
+    {% endfor %}
     {% block content %}{% endblock %}
 </body>
 </html>
