--- a/speedportal/main/templates/main/run.html
+++ b/speedportal/main/templates/main/run.html
@@ -23,16 +23,49 @@
 <form action="{% url 'main:run' run.id %}" method="post">
     {% csrf_token %}
     <p>
-        <label for="{{ form.validate_choice.id_for_label }}">Принять/Отклонить забег?</label>
-        {{ form.validate_choice }}
+        <label for="{{ validation_form.validate_choice.id_for_label }}">Принять/Отклонить забег?</label>
+        {{ validation_form.validate_choice }}
     </p>
     <p>
-        <label for="{{ form.reject_reason.id_for_label }}">Укажите причину отклонения</label>
-        {{ form.reject_reason }}
+        <label for="{{ validation_form.reject_reason.id_for_label }}">Укажите причину отклонения</label>
+        {{ validation_form.reject_reason }}
     </p>
     <p>
        <input type="submit">
     </p>
 </form>
+{% endif %}
+{% if run.is_validated %}
+{% if user.is_authenticated %}
+<form action="{% url 'main:run' run.id %}" method="post">
+    {% csrf_token %}
+    <p>
+        <label for="{{ report_form.validate_choice.id_for_label }}">Вы можете пожаловаться на забег</label>
+        {{ report_form.report_text }}
+    </p>
+    <p>
+       <input type="submit">
+    </p>
+</form>
+<form action="{% url 'main:run' run.id %}" method="post">
+    {% csrf_token %}
+    <p>
+        <label for="{{ comment_form.comment_text.id_for_label }}">Оставьте комментарий</label>
+        {{ comment_form.comment_text }}
+    </p>
+    <p>
+       <input type="submit">
+    </p>
+</form>
+{% endif %}
+<h3>Комментариев: {{ run.get_comments.count }}</h3>
+<ul>
+{% for comment in run.get_comments %}
+    <li>
+        <img src="{{ comment.user.pfp.url }}" height=20 width=20><a href="{% url 'users:profile' comment.user.slug %}">{{ comment.user.username }}</a> {{ comment.time }}
+        <p>{{ comment.comment_text }}</p>
+    </li>
+{% endfor %}
+</ul>
 {% endif %}
 {% endblock %}
