--- a/speedportal/main/templates/main/run.html
+++ b/speedportal/main/templates/main/run.html
@@ -58,7 +58,7 @@
     </p>
 </form>
 {% endif %}
-<h3>Комментариев: {{ run.get_comments.count }}</h3>
+<h3>Комментарии: {{ run.get_comments.count }}</h3>
 <ul>
 {% for comment in run.get_comments %}
     <li>
