--- a/speedportal/main/templates/main/leaderboard.html
+++ b/speedportal/main/templates/main/leaderboard.html
@@ -2,6 +2,11 @@
 
 {% block title %}{{ game_category.game.name }} {{ game_category.category.name }}{% endblock %}
 
+{% load static %}
+{% block scripts %}
+<script src="{% static 'mouse_popup.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 <h3>Таблица лидеров по {{ game_category.game.name }} в категории {{ game_category.category.name }}</h3>
 {% if not game_category.get_leaderboard %}
@@ -9,14 +14,15 @@
 {% else %}
 <table>
     <tr>
+        <th>Место</th>
         <th>Время</th>
         <th>Пользователь</th>
     </tr>
     {% for run in game_category.get_leaderboard %}
     <tr>
-        <td>{{ run.get_runtime_str }}</td>
-        <td><img src="{{ run.user.pfp.url }}" height=20 width=20><a href="{% url 'users:profile' run.user.slug %}">{{ run.user.username }}</a></td>
-        <td><a href="{% url 'main:run' run.id %}">Перейти</a></td>
+        <td data-mousepopup="{% include 'main/runpopup.html' with run=run %}" onclick="location.href='{% url 'main:run' run.id %}'">{{ forloop.counter }}</td>
+        <td data-mousepopup="{% include 'main/runpopup.html' with run=run %}" onclick="location.href='{% url 'main:run' run.id %}'">{{ run.get_runtime_str }}</td>
+        <td data-mousepopup="{% include 'main/userpopup.html' with user=run.user %}" onclick="location.href='{% url 'users:profile' run.user.slug %}'"><img src="{{ run.user.pfp.url }}" height=20 width=20>{{ run.user.username }}</td>
     </tr>
     {% endfor %}
 </table>
