Add profile popup

--- a/speedportal/main/templates/main/about.html
+++ b/speedportal/main/templates/main/about.html
@@ -6,7 +6,7 @@
 
 {% load static %}
 {% block styles %}
-<link href="{% static 'style.css' %}", rel="stylesheet">
+<link href="{% static 'style.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
