--- a/speedportal/main/templates/main/base.html
+++ b/speedportal/main/templates/main/base.html
@@ -7,27 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %} - SpeedPortal</title>
     {% load static %}
-    <link href="{% static 'style_popup.css' %}", rel="stylesheet">
+    <link href="{% static 'style.css' %}" rel="stylesheet">
+    <link href="{% static 'style_popup.css' %}" rel="stylesheet">
     {% block styles %}{% endblock %}
 
 </head>
 <body>
     <script src="{% static 'static_popup.js' %}"></script>
     {% block scripts %}{% endblock %}
-    <a href="{% url 'main:home' %}">Главная</a>
-    <a href="{% url 'main:about' %}">О нас</a>
-    <a href="{% url 'main:all_games' %}">Все игры</a>
-    {% if user.is_authenticated %}
-    <img scr="{{ user.pfp.url }}" height=30 width=30 data-staticpopup="123">
-    <a href="{% url 'users:profile' user.slug %}">Профиль</a>
-    {% if user.is_moderator %}
-    <a href="{% url 'main:moderation' %}">Модерация</a>
-    {% endif %}
-    <a href="{% url 'users:logout' %}">Выйти</a>
-    {% else %}
-    <a href="{% url 'users:login' %}">Войти</a>
-    <a href="{% url 'users:registration' %}">Зарегистрироваться</a>
-    {% endif %}
+    <div class="spread">
+        <span><a href="{% url 'main:home' %}">Главная</a> <a href="{% url 'main:about' %}">О нас</a> <a href="{% url 'main:all_games' %}">Все игры</a></span>
+        {% if user.is_authenticated %}
+            <span><img src="{{ user.pfp.url }}" height=30 width=30 data-staticpopup="{% include 'users/profilepopup.html' with user=user %}"></span>
+        {% else %}
+            <span><img src="media/pfps/def_pfp.jpg" height=30 width=30 data-staticpopup="{% include 'users/profilepopup.html' with user=user %}"></span>
+        {% endif %}
+    </div>
     {% for message in messages %}
         <p>{{ message }}</p>
     {% endfor %}
