--- a/speedportal/main/templates/main/run.html
+++ b/speedportal/main/templates/main/run.html
@@ -69,7 +69,7 @@
 <ul>
 {% for comment in run.get_comments %}
     <li>
-        <img src="{{ comment.user.pfp.url }}" height=20 width=20><a href="{% url 'users:profile' comment.user.slug %}">{{ comment.user.username }}</a> {{ comment.time }}
+        <img src="{{ comment.user.pfp.url }}" height=20 width=20><span data-mousepopup="{% include 'main/userpopup.html' with user=comment.user %}" onclick="location.href='{% url 'users:profile' comment.user.slug %}'">{{ comment.user.username }}</span> {{ comment.time }}
         <p>{{ comment.comment_text }}</p>
     </li>
 {% endfor %}
