--- a/speedportal/main/templates/main/game.html
+++ b/speedportal/main/templates/main/game.html
@@ -4,6 +4,11 @@
 {{ game.name }}
 {% endblock %}
 
+{% load static %}
+{% block scripts %}
+<script src="{% static 'add_category_dynamic.js' %}"></script>
+{% endblock %}
+
 {% block content %}
     <p><img src="{{ game.banner.url }}" height=100 wigth=640></p>
     <h1><img src="{{ game.icon.url }}" height=30 width=30>{{ game.name }}</h1>
@@ -17,4 +22,25 @@
         </li>
     {% endfor %}
     </ul>
+    {% if form %}
+    <p>Вы можете добавить категорию</p>
+    <form action="{% url 'main:game' game.slug %}" method="post">
+        {% csrf_token %}
+        <p id="category_model_field_id">
+            <label for="{{ form.category.id_for_label }}">Выберите из уже существующих</label>
+            {{ form.category }}
+        </p>
+        <p id="category_name_field_id">
+            <label for="{{ form.category_name.id_for_label }}">Или создайте новую</label>
+            {{ form.category_name }}
+        </p>
+        <p id="category_description_field_id">
+            <label for="{{ form.description.id_for_label }}">Введите описание категории</label>
+            {{ form.description }}
+        </p>
+        <p id="category_submit_id" hidden="true">
+            <input type="submit">
+        </p>
+    </form>
+    {% endif %}
 {% endblock %}
